# GameThogram

./: .gitignore  README.md  environment.yml  gamethogram.spec  pyproject.toml  setup.py
.github/workflows/: build.yml  docs.yml  tests.yml
docs/: conf.py  index.rst
docs/api/: modules.rst
pyvisor/: ManualEthologyScorer.py  MediaHandler.py  __init__.py  animal_ethogram_2.py  dataIO.py  ethogram.py  icon.py  manual_ethology_scorer_2.py  paths.py  user_input_control.py
pyvisor/GUI/: __init__.py  guidefaults_animals.json  main_gui.py  run_gui.py  styles.py  tab_analysis.py  tab_results.py
pyvisor/GUI/icon_gallery/: __init__.py  icon_gallery.py
pyvisor/GUI/model/: __init__.py  animal.py  behaviour.py  callback_handler.py  gui_data_interface.py  key_bindings.py  movie_bindings.py  scorer_action.py
pyvisor/GUI/tab_behaviours/: __init__.py  behaviour_widget.py  compatible_behaviour_widget.py  single_animal_tab.py  tab_behaviours.py
pyvisor/GUI/tab_buttons/: __init__.py  assign_button_box.py  tab_buttons.py
pyvisor/analysis/: __init__.py  analysis_offline.py  ethogram_analysis.py
pyvisor/exception/: __init__.py
pyvisor/resources/: __init__.py
scripts/: add_docs.py  build_local.sh
tests/: test_button_bindings.py
tests/unit/: test_portable_icon_paths.py
tests/unit/test_GUI/: test_animal_copy.py  test_behav_binding.py
